# myfuncs

./: pyproject.toml  requirements.txt
scripts/: build.sh
shared/: pyproject.toml
shared/shared/: constant.py  models.py
src/func1/: main.py
src/func2/: main.py
stubs/functions_framework/: __init__.pyi
